# tree-automata

./: Cargo.toml  README.md
examples/: search.rs
src/: inter.rs  label.rs  language.rs  lib.rs  state.rs  transpose.rs  utils.rs
src/alternating/: mod.rs
src/bottom_up/: macros.rs  mod.rs  search.rs  width_search.rs
tests/: construction.rs  search.rs
